# abcross-sysroot

./: .gitignore  README.md  pyproject.toml
abcross/: __init__.py  cli.py  common.py  distribution.py  io.py  sysroot.py  tar.py
abcross_tests/: test_distribution.py
